// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination should handle first page click properly 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 hyaceY"
    data-testid="Pagination"
  >
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__first"
      type="button"
    >
      <div
        class="sc-bdfBwQ fdfkzt"
        height="12"
        width="12"
      >
        <svg>
          pagination-first.svg
        </svg>
      </div>
    </button>
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__previous"
      type="button"
    >
      <div
        class="sc-bdfBwQ TENjd mr-2"
        height="10"
        width="10"
      >
        <svg>
          back.svg
        </svg>
      </div>
      Previous
    </button>
    <div
      class="flex px-2 rounded bg-theme-primary-contrast"
    >
      <div
        class="Pagination__PaginationSearchButton-x7juhx-2 fUIqyP"
      >
        <span>
          ...
        </span>
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        99
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        100
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS current-page"
      >
        101
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        102
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        103
      </div>
      <div
        class="Pagination__PaginationSearchButton-x7juhx-2 fUIqyP"
      >
        <span>
          ...
        </span>
      </div>
    </div>
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__next"
      type="button"
    >
      Next
      <div
        class="sc-bdfBwQ fdfkzt ml-2"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__last"
      type="button"
    >
      <div
        class="sc-bdfBwQ fdfkzt"
        height="12"
        width="12"
      >
        <svg>
          pagination-last.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination should handle last page click properly 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 hyaceY"
    data-testid="Pagination"
  >
    <div
      class="flex px-2 rounded bg-theme-primary-contrast"
    >
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS current-page"
      >
        1
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        2
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        3
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        4
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        5
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        6
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        7
      </div>
      <div
        class="Pagination__PaginationSearchButton-x7juhx-2 fUIqyP"
      >
        <span>
          ...
        </span>
      </div>
    </div>
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__next"
      type="button"
    >
      Next
      <div
        class="sc-bdfBwQ fdfkzt ml-2"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__last"
      type="button"
    >
      <div
        class="sc-bdfBwQ fdfkzt"
        height="12"
        width="12"
      >
        <svg>
          pagination-last.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination should handle next page click properly 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 hyaceY"
    data-testid="Pagination"
  >
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__previous"
      type="button"
    >
      <div
        class="sc-bdfBwQ TENjd mr-2"
        height="10"
        width="10"
      >
        <svg>
          back.svg
        </svg>
      </div>
      Previous
    </button>
    <div
      class="flex px-2 rounded bg-theme-primary-contrast"
    >
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        1
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS current-page"
      >
        2
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        3
      </div>
    </div>
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__next"
      type="button"
    >
      Next
      <div
        class="sc-bdfBwQ fdfkzt ml-2"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination should handle page selection properly 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 hyaceY"
    data-testid="Pagination"
  >
    <div
      class="flex px-2 rounded bg-theme-primary-contrast"
    >
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS current-page"
      >
        1
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        2
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        3
      </div>
    </div>
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__next"
      type="button"
    >
      Next
      <div
        class="sc-bdfBwQ fdfkzt ml-2"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination should handle previous page click properly 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 hyaceY"
    data-testid="Pagination"
  >
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__first"
      type="button"
    >
      <div
        class="sc-bdfBwQ fdfkzt"
        height="12"
        width="12"
      >
        <svg>
          pagination-first.svg
        </svg>
      </div>
    </button>
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__previous"
      type="button"
    >
      <div
        class="sc-bdfBwQ TENjd mr-2"
        height="10"
        width="10"
      >
        <svg>
          back.svg
        </svg>
      </div>
      Previous
    </button>
    <div
      class="flex px-2 rounded bg-theme-primary-contrast"
    >
      <div
        class="Pagination__PaginationSearchButton-x7juhx-2 fUIqyP"
      >
        <span>
          ...
        </span>
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        4
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        5
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        6
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        7
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        8
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS current-page"
      >
        9
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        10
      </div>
    </div>
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__next"
      type="button"
    >
      Next
      <div
        class="sc-bdfBwQ fdfkzt ml-2"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination should not render first button if pagination buttons include 1 (first page) 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 hyaceY"
    data-testid="Pagination"
  >
    <div
      class="flex px-2 rounded bg-theme-primary-contrast"
    >
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS current-page"
      >
        1
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        2
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        3
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        4
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        5
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        6
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        7
      </div>
      <div
        class="Pagination__PaginationSearchButton-x7juhx-2 fUIqyP"
      >
        <span>
          ...
        </span>
      </div>
    </div>
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__next"
      type="button"
    >
      Next
      <div
        class="sc-bdfBwQ fdfkzt ml-2"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__last"
      type="button"
    >
      <div
        class="sc-bdfBwQ fdfkzt"
        height="12"
        width="12"
      >
        <svg>
          pagination-last.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination should not render first button if pagination buttons include 1 (second page) 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 hyaceY"
    data-testid="Pagination"
  >
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__previous"
      type="button"
    >
      <div
        class="sc-bdfBwQ TENjd mr-2"
        height="10"
        width="10"
      >
        <svg>
          back.svg
        </svg>
      </div>
      Previous
    </button>
    <div
      class="flex px-2 rounded bg-theme-primary-contrast"
    >
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        1
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS current-page"
      >
        2
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        3
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        4
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        5
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        6
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        7
      </div>
      <div
        class="Pagination__PaginationSearchButton-x7juhx-2 fUIqyP"
      >
        <span>
          ...
        </span>
      </div>
    </div>
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__next"
      type="button"
    >
      Next
      <div
        class="sc-bdfBwQ fdfkzt ml-2"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__last"
      type="button"
    >
      <div
        class="sc-bdfBwQ fdfkzt"
        height="12"
        width="12"
      >
        <svg>
          pagination-last.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination should not render first button if pagination buttons include 1 (third page) 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 hyaceY"
    data-testid="Pagination"
  >
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__previous"
      type="button"
    >
      <div
        class="sc-bdfBwQ TENjd mr-2"
        height="10"
        width="10"
      >
        <svg>
          back.svg
        </svg>
      </div>
      Previous
    </button>
    <div
      class="flex px-2 rounded bg-theme-primary-contrast"
    >
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        1
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        2
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS current-page"
      >
        3
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        4
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        5
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        6
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        7
      </div>
      <div
        class="Pagination__PaginationSearchButton-x7juhx-2 fUIqyP"
      >
        <span>
          ...
        </span>
      </div>
    </div>
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__next"
      type="button"
    >
      Next
      <div
        class="sc-bdfBwQ fdfkzt ml-2"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__last"
      type="button"
    >
      <div
        class="sc-bdfBwQ fdfkzt"
        height="12"
        width="12"
      >
        <svg>
          pagination-last.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination should not render first button if pagination buttons include the last page (last page) 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 hyaceY"
    data-testid="Pagination"
  >
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__first"
      type="button"
    >
      <div
        class="sc-bdfBwQ fdfkzt"
        height="12"
        width="12"
      >
        <svg>
          pagination-first.svg
        </svg>
      </div>
    </button>
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__previous"
      type="button"
    >
      <div
        class="sc-bdfBwQ TENjd mr-2"
        height="10"
        width="10"
      >
        <svg>
          back.svg
        </svg>
      </div>
      Previous
    </button>
    <div
      class="flex px-2 rounded bg-theme-primary-contrast"
    >
      <div
        class="Pagination__PaginationSearchButton-x7juhx-2 fUIqyP"
      >
        <span>
          ...
        </span>
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        4
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        5
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        6
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        7
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        8
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        9
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS current-page"
      >
        10
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pagination should not render first button if pagination buttons include the last page (second-to-last page) 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 hyaceY"
    data-testid="Pagination"
  >
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__first"
      type="button"
    >
      <div
        class="sc-bdfBwQ fdfkzt"
        height="12"
        width="12"
      >
        <svg>
          pagination-first.svg
        </svg>
      </div>
    </button>
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__previous"
      type="button"
    >
      <div
        class="sc-bdfBwQ TENjd mr-2"
        height="10"
        width="10"
      >
        <svg>
          back.svg
        </svg>
      </div>
      Previous
    </button>
    <div
      class="flex px-2 rounded bg-theme-primary-contrast"
    >
      <div
        class="Pagination__PaginationSearchButton-x7juhx-2 fUIqyP"
      >
        <span>
          ...
        </span>
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        4
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        5
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        6
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        7
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        8
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS current-page"
      >
        9
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        10
      </div>
    </div>
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__next"
      type="button"
    >
      Next
      <div
        class="sc-bdfBwQ fdfkzt ml-2"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination should not render first button if pagination buttons include the last page (third-to-last page) 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 hyaceY"
    data-testid="Pagination"
  >
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__first"
      type="button"
    >
      <div
        class="sc-bdfBwQ fdfkzt"
        height="12"
        width="12"
      >
        <svg>
          pagination-first.svg
        </svg>
      </div>
    </button>
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__previous"
      type="button"
    >
      <div
        class="sc-bdfBwQ TENjd mr-2"
        height="10"
        width="10"
      >
        <svg>
          back.svg
        </svg>
      </div>
      Previous
    </button>
    <div
      class="flex px-2 rounded bg-theme-primary-contrast"
    >
      <div
        class="Pagination__PaginationSearchButton-x7juhx-2 fUIqyP"
      >
        <span>
          ...
        </span>
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        4
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        5
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        6
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        7
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS current-page"
      >
        8
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        9
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        10
      </div>
    </div>
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__next"
      type="button"
    >
      Next
      <div
        class="sc-bdfBwQ fdfkzt ml-2"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination should not render next button on last page 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 hyaceY"
    data-testid="Pagination"
  >
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__first"
      type="button"
    >
      <div
        class="sc-bdfBwQ fdfkzt"
        height="12"
        width="12"
      >
        <svg>
          pagination-first.svg
        </svg>
      </div>
    </button>
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__previous"
      type="button"
    >
      <div
        class="sc-bdfBwQ TENjd mr-2"
        height="10"
        width="10"
      >
        <svg>
          back.svg
        </svg>
      </div>
      Previous
    </button>
    <div
      class="flex px-2 rounded bg-theme-primary-contrast"
    >
      <div
        class="Pagination__PaginationSearchButton-x7juhx-2 fUIqyP"
      >
        <span>
          ...
        </span>
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        4
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        5
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        6
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        7
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        8
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        9
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS current-page"
      >
        10
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pagination should not render previous buttons on first page 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 hyaceY"
    data-testid="Pagination"
  >
    <div
      class="flex px-2 rounded bg-theme-primary-contrast"
    >
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS current-page"
      >
        1
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        2
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        3
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        4
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        5
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        6
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        7
      </div>
      <div
        class="Pagination__PaginationSearchButton-x7juhx-2 fUIqyP"
      >
        <span>
          ...
        </span>
      </div>
    </div>
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__next"
      type="button"
    >
      Next
      <div
        class="sc-bdfBwQ fdfkzt ml-2"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__last"
      type="button"
    >
      <div
        class="sc-bdfBwQ fdfkzt"
        height="12"
        width="12"
      >
        <svg>
          pagination-last.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination should render properly 1`] = `
<DocumentFragment>
  <div
    class="Pagination__Wrapper-x7juhx-0 hyaceY"
    data-testid="Pagination"
  >
    <div
      class="flex px-2 rounded bg-theme-primary-contrast"
    >
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS current-page"
      >
        1
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        2
      </div>
      <div
        class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
      >
        3
      </div>
    </div>
    <button
      class="Button-mdtvtf-0 khjEGA"
      data-testid="Pagination__next"
      type="button"
    >
      Next
      <div
        class="sc-bdfBwQ fdfkzt ml-2"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
